Remove page scroller when dropdown is open on mobile (Fixes #31)

--- a/css/index.css
+++ b/css/index.css
@@ -7647,6 +7647,9 @@ body {
 }
 
 @media (max-width: 750px) {
+  .backdrop {
+    overflow: hidden;
+  }
   .backdrop #footerfix::before {
     content: "";
     display: block;
